[gd_scene load_steps=14 format=3 uid="uid://bq5nlpye52ueo"]

[ext_resource type="Script" path="res://enemy/blue_enemy.gd" id="1_2ch57"]
[ext_resource type="Texture2D" uid="uid://sgmbb8wk0elb" path="res://asset/enemy/blue-enemy-Sheet.png" id="1_vxj4a"]
[ext_resource type="PackedScene" uid="uid://clw1cyo74dvvq" path="res://common/hurtbox.tscn" id="2_uks7p"]
[ext_resource type="PackedScene" uid="uid://dit4djknhylg6" path="res://common/hitbox.tscn" id="3_xlf6v"]
[ext_resource type="PackedScene" uid="uid://bbsy56t5732xj" path="res://common/jumpbox.tscn" id="4_1kd8o"]
[ext_resource type="PackedScene" uid="uid://b4h2kx2hgqqkv" path="res://common/stats.tscn" id="4_d1wpx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aa5wl"]
size = Vector2(13, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2l8ob"]
size = Vector2(15, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a81d1"]
size = Vector2(11, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gcva8"]
size = Vector2(11, 2)

[sub_resource type="Animation" id="Animation_b6mgu"]
resource_name = "die"

[sub_resource type="Animation" id="Animation_jqmpr"]
resource_name = "run"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p1eyn"]
_data = {
"die": SubResource("Animation_b6mgu"),
"run": SubResource("Animation_jqmpr")
}

[node name="BlueEnemy" type="RigidBody2D"]
collision_layer = 32
script = ExtResource("1_2ch57")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_vxj4a")
offset = Vector2(0, -7)
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5.5)
shape = SubResource("RectangleShape2D_aa5wl")

[node name="Hurtbox" parent="." instance=ExtResource("2_uks7p")]
collision_layer = 128
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -6.5)
shape = SubResource("RectangleShape2D_2l8ob")

[node name="Hitbox" parent="." instance=ExtResource("3_xlf6v")]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-0.5, -6)
shape = SubResource("RectangleShape2D_a81d1")

[node name="Jumpbox" parent="." instance=ExtResource("4_1kd8o")]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jumpbox"]
position = Vector2(-0.5, -12)
shape = SubResource("RectangleShape2D_gcva8")

[node name="Stats" parent="." instance=ExtResource("4_d1wpx")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p1eyn")
}

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="bounce" from="Jumpbox" to="." method="_on_jumpbox_bounce"]
[connection signal="health_empty" from="Stats" to="." method="_on_stats_health_empty"]
